# adapter-client-stripe

./: .env.example  Cargo.toml  Dockerfile  README.md
.github/workflows/: build.yml
src/: config.rs  data_adapter.rs  encryption.rs  healthz.rs  main.rs  middleware.rs  model.rs  protocol.rs  receipt.rs  webhook.rs
