[package]
name = "adapter-client-stripe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-stripe = { version = "0.37.0", features = ["runtime-tokio-hyper"] }
axum = "0.7.5"
tokio = { version = "1.37", features = ["full"] }
dotenv = "0.15.0"
http = "1.1.0"
hyper = "1.3.1"
serde = "1.0.200"
tracing-subscriber = "0.3.18"
tracing = "0.1.40"

[dev-dependencies]
rusty-hook = "0.11.2"
